k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastfood-app
  labels:
    app: fastfood-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastfood-app
  template:
    metadata:
      labels:
        app: fastfood-app
    spec:
      containers:
        - name: fastfood-app
          image: <AWS_ACCOUNT_ID>.dkr.ecr.<AWS_REGION>.amazonaws.com/fastfood-app:latest
          ports:
            - containerPort: 8080
