k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastfood-app-service
spec:
  selector:
    app: fastfood-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
