k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastfood-app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: <YOUR_DOMAIN>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastfood-app-service
                port:
                  number: 80
